--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# DO NOT PUSH THESE FILES
+.vsconfig
+Config/*
+Content/*
+*.uproject
+*.cs
